--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
   "devDependencies": {
     "@tailwindcss/forms": "0.2.1",
     "autoprefixer": "10.1.0",
-    "babel-eslint": "10.1.0",
+    "babel-eslint": "^10.1.0",
     "cssnano": "4.1.10",
-    "eslint": "7.21.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react": "^7.22.0",
     "gatsby-plugin-eslint": "2.0.8",
     "postcss": "8.2.7",
     "prettier": "2.2.1",
